examples/test/testpolicy17656.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17656
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key49: value42
      key4: value44
      key41: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value2
      podSelector:
        matchLabels:
          key2: value27
          key25: value44
